# renamarr

./: .dockerignore  .env.example  .env.local  .envrc  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .secrets.toml.example  .yamlfix.toml  AGENTS.md  Dockerfile  LICENSE  README.md  chart_schema.yaml  ct.yaml  docker-compose.yaml  index.yaml  kind-config.yaml  lintconf.yaml  pyproject.toml  renovate.json  uv-secure.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: build-test-lint.yaml  buildImage.yaml  codecov-validate.yaml  helm-ci.yaml  publish-helm-chart.yaml  python-ci.yaml  renovate-validate.yaml
docker/: Dockerfile  config.yml.example  config_schema.py  docker-compose.yml
docs/: local-development.md
example/: config.yml.example  docker-compose.yml
example/grafana/: renamarr-alerts.yaml  renamarr-dashboard.v2.json
helm/: values.yaml.example
helm/charts/renamarr/: .helmignore  Chart.yaml  README.md  values.yaml
helm/charts/renamarr/ci/: custom-schedule-values.yaml  example-values.yaml  fixed-version-values.yaml
helm/charts/renamarr/templates/: configmap.yaml  cronjob.yaml
src/: config_schema.py  existing_renamer.py  interval.py  iso8601.py  main.py  radarr_renamarr.py  series_scanner.py  sonarr_renamarr.py  sonarr_series_scanner.py
src/config/: schema.py
src/models/: batch_rename.py  bulk_move.py  move.py  radarr_bulk_move.py  rename.py  sonarr_bulk_move.py
src/renamarr/: http_trace.py  logging_config.py  observability.py
src/renamarr/otel/: arr_command_result.py  job_result.py  observability.py  operation_name.py  operation_result.py  service_name.py
src/renamarr/radarr/models/: folder_rename_plan.py  movie_rename_plan.py
src/renamarr/radarr/services/: analyze_files.py  movie_folder_rename.py  movie_rename.py  renamarr.py
src/renamarr/sonarr/models/: batch_rename.py  bulk_move.py  episode_rename.py  episode_rename_plan.py  folder_rename_plan.py  rename.py  root_move.py
src/renamarr/sonarr/services/: analyze_files.py  renamarr.py  series_folder_rename.py  series_rename.py
src/sonarr/: existing_renamer.py  series_scanner.py
test/models/: test_batch_rename.py
tests/: conftest.py  test_bulk_move.py  test_config_schema.py  test_existing_renamer.py  test_http_trace.py  test_interval.py  test_iso8601.py  test_logging_config.py  test_main.py  test_observability.py  test_observability_artifacts.py  test_radarr_analyze_files.py  test_radarr_movie_folder_rename.py  test_radarr_movie_rename.py  test_radarr_renamarr.py  test_series_scanner.py  test_sonarr_analyze_files.py  test_sonarr_renamarr.py  test_sonarr_series_folder_rename.py  test_sonarr_series_rename.py  test_sonarr_series_scanner.py
tests/fixtures/: disabled.yml  legacy_sonarr.yml  multiple_sonarrs.yml  single_sonarr.yml
tests/models/: test_batch_rename.py  test_radarr_bulk_move.py  test_radarr_folder_rename_plan.py  test_radarr_movie_rename_plan.py  test_sonarr_bulk_move.py  test_sonarr_episode_rename_plan.py  test_sonarr_folder_rename_plan.py
tests/sonarr/: test_existing_renamer.py  test_series_scanner.py
