[project]
requires-python = ">= 3.13"
name = "renamarr"
description = "continual rename tool for *arr apps"
authors = [{ name = "Brad Holland", email = "hollanbm@gmail.com" }]
version = "1"
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pycliarr = "^1.0.26"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
python-dateutil = "^2.9.0-post.0"
python-config-parser = "^3.1.3"
schedule = "^1.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
mock = "^5.1.0"
pytest-loguru = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["./src", "./src/models"]
testpaths = ["./tests", "./tests/models"]
addopts = [
  "--cov=src",
  "tests",
  "--cov-branch",
  "--capture=sys",
  "--cov-report=xml",
  "--cov-report=html",
  "--import-mode=importlib",
]
mock_use_standalone_module = "True"
