[project]
requires-python = ">= 3.14"
name = "renamarr"
description = "continual rename tool for *arr apps"
authors = [{ name = "Brad Holland", email = "hollanbm@gmail.com" }]
version = "1"
dependencies = [
  "pycliarr>=1.0.26,<2",
  "python-dotenv>=1.0.1,<2",
  "loguru>=0.7.3,<0.8",
  "python-dateutil>=2.9.0.post0,<3",
  "python-config-parser>=3.1.3,<4",
  "schedule>=1.2.2,<2",
]

[dependency-groups]
dev = [
  "ruff==0.15.12",
]
test = [
  "pytest>=9.0.1,<10",
  "pytest-cov>=7.0.0,<8",
  "pytest-mock>=3.14.0,<4",
  "mock>=5.1.0,<6",
  "pytest-loguru>=0.4.0,<0.5",
]

# Treat this repo as an application, so uv installs dependencies without packaging renamarr itself.
[tool.uv]
required-version = "==0.11.10"
package = false
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux'",
]

[tool.uv.audit]
ignore = [
  "GHSA-58cw-g322-p94v", # mistune 0.8.4, pycliarr downstream dependency
  "GHSA-8g87-j6q8-g93x", # mistune 0.8.4, pycliarr downstream dependency
  "GHSA-v87v-83h2-53w7", # mistune 0.8.4, pycliarr downstream dependency
]

[tool.pytest]
pythonpath = ["./src", "./src/models"]
testpaths = ["./tests", "./tests/models"]
addopts = [
  "--cov=src",
  "tests",
  "--cov-branch",
  "--capture=sys",
  "--cov-report=xml:coverage.xml",
  "--cov-report=html",
  "--import-mode=importlib",
]
mock_use_standalone_module = "True"
